# breaking_cues

./: .gitignore  README.md  build.sh  dev.sh  elm.json
.github/workflows/: build.yml
src/: Client.elm  Deck.elm  EditableList.elm  Form.elm  Output.elm  Programme.elm  Slide.elm  Style.elm  StylePanel.elm  UUID.elm
src-tauri/: :w  Cargo.toml  rustc-ice-2024-09-22T19_11_07-91241.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/Fetch/: Bible.elm  Common.elm  Hymn.elm  Psalm.elm
