[package]
name = "breaking_cues"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "breaking_cues_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
tauri = { version = "2.0.2", features = [] }
tauri-utils = { version = "2.0.1" }
tauri-plugin-dialog = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7.7", features = ["ws"] }
tokio = "1.40.0"
http = "1.1.0"
mime_guess = "2.0.5"
futures = "0.3.31"
parking_lot = { version = "0.12.3", features = ["send_guard"] }
reqwest = "0.12.8"
include_dir = "0.7.4"
directories = "5.0.1"
diesel = { version = "2.2.4", features = ["sqlite"] }
itertools = "0.13.0"

